# GOUHFI

./: .gitignore  README.md  pyproject.toml
data-utils/: brain_extraction_antspynet.py  conform-images.py  conform.py  conform_images.py  reorder_labels_freesurfer_lut.py
data_utils/: add_extra_cerebral_label.py  brain_extraction_antspynet.py  conform_images.py  conform_labels.py  rename_files_nnunet_convention.py  rename_files_nnunet_covention.py  reorder_labels_freesurfer_lut.py
data_utils/fastsurfer/: arg_types.py  conform.py  logging_fsv.py
misc/: freesurfer_brain_labels_lut.txt  freesurfer_cortex_labels_lut.txt  gouhfi_v2p0_all_labels_lut.txt  gouhfi_v2p0_brain_labels_lut.txt  gouhfi_v2p0_cortex_labels_lut.txt  label-list-lut.txt
nnunet/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer_NoDA_500epochs_AdamW.py
nnunetv2/training/nnUNetTrainer/: nnUNetTrainer_NoDA_500epochs_AdamW.py
run-inference/: gouhfi_inference_postpro.py  inf-postpro-eval-nnunet.py
run_inference/: gouhfi_inference_postpro.py  gouhfi_inference_postpro_reo.py
trained-model/: gouhfi-trained-model-weights.md
trained_model/: gouhfi-trained-model-weights.md
trainer/: nnUNetTrainer.py  nnUNetTrainer_NoDA_500epochs_AdamW.py
