[project]
name = "gouhfi"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"

description = """GOUHFI is a novel Deep Learning-based brain segmentation tool optimized for Ultra-High Field MRI (i.e., >3T) where the domain randomization approach was used, making it contrast- and resolution-agnostic."""

authors = [
    { name = "Marc-Antoine Fortin", email = "marc.a.fortin@ntnu.no" }
]

license = "Apache-2.0"

keywords = [
    "brain segmentation",
    "ultra-high field MRI", 
    "deep learning",
    "medical image segmentation",
    "semantic segmentation",
    "domain randomization", 
    "contrast-agnostic",
    "resolution-agnostic",
]

dependencies = [
    "nnunetv2",
    "ants",
    "antspynet",
    "scikit-image"
]

[project.urls]
homepage = "https://github.com/mafortin/GOUHFI"
repository = "https://github.com/mafortin/GOUHFI"

# Scripts section for executable entry points
[project.scripts]
run_goufhi = "run_inference.gouhfi_inference_postpro:main"
run_conforming = "data_utils.conform_images:main"
run_brain_extraction = "data_utils.brain_extraction_antspynet:main"
run_labels_reordering = "data_utils.reorder_labels_freesurfer_lut:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_utils*", "run_inference*"]
exclude = ["misc*", "figs*", "test_data*", "trained_model*"]

